--- a/src/pages/pointventes/pointventes.html
+++ b/src/pages/pointventes/pointventes.html
@@ -32,7 +32,7 @@
          <button float-right ion-button icon-left outline small (click)="openMap()" [disabled]="!pointventes.length"> <ion-icon name="map"></ion-icon>Carte</button>
        </ion-col>   
       </ion-row>
-    <ion-list *ngIf="pointventes&&pointventes.length">
+    <ion-list *ngIf="pointventes&&pointventes.length&&!loading">
         <ion-item-sliding *ngFor="let pointvente of pointventes"  [hidden]="pointvente.hide||!pointvente.nom" #slidingItem>
         <ion-item #item (click)="show(pointvente,slidingItem)" text-wrap>
             {{pointvente.nom}}  <strong *ngIf="pointvente.quartier">- {{pointvente.quartier}}</strong>
