--- a/src/pages/commendes/commendes.html
+++ b/src/pages/commendes/commendes.html
@@ -32,7 +32,7 @@
     <button float-right ion-button icon-left outline small (click)="openMap()" [disabled]="!commendes.length"> <ion-icon name="map" ></ion-icon>Carte</button>
   </ion-col>   
  </ion-row>
-<ion-list *ngIf="commendes.length">
+<ion-list *ngIf="commendes.length&&!loading">
   <ion-item-sliding  *ngFor="let commende of commendes"  #slidingItem [hidden]="commende.deleted||commende.hide">
   <ion-item (click)="openCart(commende)" text-wrap>
     <div *ngIf="commende.pointVente&&commende.id">
@@ -57,11 +57,13 @@
           Aucun element correspondant aux critères.
         </div>
     </ion-row>
-  </ion-grid>  
+  </ion-grid> 
+  <ion-grid style="justify-content: center; height: 100%;" *ngIf="loading">
+    <ion-row style="justify-content: center;height: 100%;" justify-content-center align-items-center>
+        <ion-spinner name="ios"></ion-spinner>
+    </ion-row>
+  </ion-grid>   
 <ion-fab right bottom>
   <button ion-fab color="primary" (click)="add()"><ion-icon name="add" ></ion-icon></button>
 </ion-fab>
 </ion-content>
-<!--<ion-footer >
-    <ion-row><ion-col>{{commendes.length}} lignes</ion-col><ion-col></ion-col><ion-col></ion-col></ion-row>
-  </ion-footer>-->
