hideBackButton on mobile

--- a/src/pages/commendes/commendes.html
+++ b/src/pages/commendes/commendes.html
@@ -1,5 +1,5 @@
 <ion-header no-border #head>
-  <ion-navbar>
+  <ion-navbar hideBackButton="true">
       <button menuToggle  ion-button icon-only showWhen="mobile">
           <ion-icon name="menu"></ion-icon>
         </button>    
