--- a/src/pages/previsions/previsions.html
+++ b/src/pages/previsions/previsions.html
@@ -1,6 +1,6 @@
 
 <ion-header #head>
-  <ion-navbar>
+  <ion-navbar hideBackButton="true">
       <button menuToggle  ion-button icon-only showWhen="mobile">
           <ion-icon name="menu"></ion-icon>
         </button>
