--- a/src/pages/vendeurs/vendeurs.html
+++ b/src/pages/vendeurs/vendeurs.html
@@ -1,6 +1,6 @@
 <ion-header no-border no-shadow>
-    <ion-navbar>
-        <button menuToggle  ion-button icon-only showwhen="mobile">
+    <ion-navbar hideBackButton="true">
+        <button menuToggle  ion-button icon-only showWhen="mobile">
             <ion-icon name="menu"></ion-icon>
           </button>  
       <ion-title>Les vendeurs</ion-title>
