--- a/src/pages/filtre-vente/filtre-vente.html
+++ b/src/pages/filtre-vente/filtre-vente.html
@@ -30,7 +30,7 @@
             <ion-option value="Autre">Autre</ion-option>
         </ion-select>
     </ion-item>
-    <ion-item *ngIf="secteurs&&secteurs.length">
+    <!--<ion-item *ngIf="secteurs&&secteurs.length">
         <ion-label color="primary" >
             <span>Situés dans la zone de </span>
         </ion-label>
@@ -38,7 +38,7 @@
             <ion-option  value="">Toutes les zones</ion-option>
             <ion-option *ngFor="let secteur of secteurs" [value]="secteur.id">{{secteur.nom}}</ion-option>
         </ion-select>
-    </ion-item>
+    </ion-item>-->
     <ion-item-divider>Date de la livraison ou visite</ion-item-divider>
         <ion-row>
                 <ion-col>
