--- a/src/pages/secteurs/secteurs.html
+++ b/src/pages/secteurs/secteurs.html
@@ -1,5 +1,5 @@
 <ion-header  no-border no-shadow>
-    <ion-navbar>
+    <ion-navbar hideBackButton="true">
         <button menuToggle  ion-button icon-only showwhen="mobile">
             <ion-icon name="menu"></ion-icon>
           </button>
@@ -22,14 +22,14 @@
     </ion-navbar>
   </ion-header>
   <ion-content padding-top>     
-      <ion-list>
+      <ion-list *ngIf="secteurs.length">
           <ion-list-header>Liste des zones ({{secteurs.length}} )</ion-list-header>
           <ion-item  *ngFor="let secteur of secteurs" (click)="add(secteur)" [hidden]="secteur.hide" text-wrap>
                 <span *ngIf="secteur.ville">{{secteur.ville}} - </span> <strong>{{secteur.nom}}</strong>
               <p>{{secteur.description}}</p>
           </ion-item>
       </ion-list>
-      <ion-grid style="justify-content: center;height: 100%;" *ngIf="loading"> 
+      <ion-grid style="justify-content: center;height: 100%;" *ngIf="!secteurs.length&&loading"> 
           <ion-row style="justify-content: center;height: 100%;" justify-content-center align-items-center>
               <ion-spinner name="ios"></ion-spinner>
           </ion-row>
