--- a/src/pages/stats/stats.html
+++ b/src/pages/stats/stats.html
@@ -17,7 +17,7 @@
   </ion-navbar>
 </ion-header> 
 <ion-content>
-  <div *ngIf="stats">
+  <div *ngIf="stats&&pieChartData">
 <ion-grid>
   <ion-row>
 <ion-card>
@@ -89,7 +89,7 @@
   </ion-row>
 </ion-grid>
    </div>
-    <ion-grid style="height: 80%;justify-content: center;position:absolute;top:15vh" *ngIf="!pieChartData">
+    <ion-grid style="height: 80%;justify-content: center;position:absolute;top:15vh" *ngIf="!pieChartData&&loading">
       <ion-row style="height: 100%;justify-content: center;" justify-content-center align-items-center>
           <ion-spinner name="ios"></ion-spinner>
       </ion-row>
