--- a/src/pages/filtre-vente/filtre-vente.html
+++ b/src/pages/filtre-vente/filtre-vente.html
@@ -63,7 +63,7 @@
         </ion-label>
         <ion-select [(ngModel)]="filtre.visitedBy" name="visitedBy" #user="ngModel">
             <ion-option  value="">Tout le monde</ion-option>
-            <ion-option *ngFor="let user of users" [value]="user.id">{{user.nom}}</ion-option>
+            <ion-option *ngFor="let user of users" [value]="user.id" [hidden]="!user.nom">{{user.nom}}</ion-option>
         </ion-select>
     </ion-item>
 </ion-content>
