--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -20,7 +20,11 @@
           </ion-card> 
         </div> 
 <div #map id="map">
-
+    <ion-grid style="justify-content: center; height: 100%;" >
+        <ion-row style="justify-content: center;height: 100%;" justify-content-center align-items-center>
+            <ion-spinner name="ios"></ion-spinner>
+        </ion-row>
+      </ion-grid>  
 </div>
 </ion-content>
 <ion-footer></ion-footer>
