--- a/src/pages/stats/stats.html
+++ b/src/pages/stats/stats.html
@@ -40,7 +40,7 @@
                   <ion-col><span class="circle-text primary"><ion-icon name="md-people"></ion-icon> </span></ion-col>
                   <ion-col text-center> <span class="label">{{stats.total_count}}</span></ion-col>
                 </ion-row>
-                <p><ion-icon name="ios-information-circle-outline"></ion-icon> Nombre total des clients</p>
+                <p><ion-icon name="ios-information-circle-outline"></ion-icon>Points de ventes</p>
               </ion-card-content>
             </ion-card>
       </ion-col>
@@ -51,7 +51,7 @@
                       <ion-col><span class="circle-text orange"><ion-icon name="md-person-add"></ion-icon></span></ion-col>
                       <ion-col text-center> <span class="label">{{stats.created_count}}</span></ion-col>
                     </ion-row>                  
-                <p><ion-icon name="ios-information-circle-outline"></ion-icon>Nombre de Clients prospectés</p>
+                <p><ion-icon name="ios-information-circle-outline"></ion-icon>Clients prospectés</p>
               </ion-card-content>
             </ion-card>
       </ion-col>
@@ -62,7 +62,7 @@
                     <ion-col><span class="circle-text danger"><ion-icon name="md-checkbox-outline"></ion-icon></span></ion-col>
                     <ion-col text-center> <span class="label">{{stats.engaged_count}}</span></ion-col>
                   </ion-row>                
-                <p><ion-icon name="ios-information-circle-outline"></ion-icon>Nombre de Clients engagés </p>
+                <p><ion-icon name="ios-information-circle-outline"></ion-icon>Clients engagés </p>
               </ion-card-content>
             </ion-card>
       </ion-col>
