--- a/src/pages/filtre-stats/filtre-stats.html
+++ b/src/pages/filtre-stats/filtre-stats.html
@@ -72,7 +72,7 @@
         </ion-label>
         <ion-select [(ngModel)]="filtre.doneBy" name="doneBy" #user="ngModel">
             <ion-option  value="">Tout le monde</ion-option>
-            <ion-option *ngFor="let user of users" [value]="user.id">{{user.nom}}</ion-option>
+            <ion-option *ngFor="let user of users" [value]="user.id" [hidden]="!user.nom">{{user.nom}}</ion-option>
         </ion-select>
     </ion-item>
 </ion-content>
