--- a/src/pages/rendezvous/rendezvous.html
+++ b/src/pages/rendezvous/rendezvous.html
@@ -27,10 +27,10 @@
                 </ion-item>
                 <ion-item *ngIf="users&&users.length">
                     <ion-label color="primary" floating>
-                  <span>A honorer par</span>
+                  <span>Par</span>
               </ion-label>
                 <ion-select [(ngModel)]="rendezvous.user" name="user" #user="ngModel">
-                      <ion-option *ngFor="let user of users" [value]="user.id">{{user.nom}}</ion-option>
+                      <ion-option *ngFor="let user of users" [value]="user.id" [hidden]="!user.nom">{{user.nom}}</ion-option>
                   </ion-select>
           </ion-item>            
            <ion-item>
